# OpenCV-Examples-in-C-

./: Makefile.am  README.md  aclocal.m4  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: displayImage.cpp
